--- a/requirements.txt
+++ b/requirements.txt
@@ -1,51 +1,7 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: linux-64
-_libgcc_mutex=0.1=conda_forge
-_openmp_mutex=4.5=2_gnu
-aniso8601=9.0.1=pypi_0
-blas=1.0=mkl
-ca-certificates=2022.07.19=h06a4308_0
-certifi=2022.6.15=py39h06a4308_0
-charset-normalizer=2.1.1=pypi_0
-click=8.0.4=py39h06a4308_0
-flask=2.2.2=pyhd8ed1ab_0
-flask-restful=0.3.9=pypi_0
-idna=3.4=pypi_0
-importlib-metadata=4.11.3=py39h06a4308_0
-intel-openmp=2021.4.0=h06a4308_3561
-itsdangerous=2.0.1=pyhd3eb1b0_0
-jinja2=3.0.3=pyhd3eb1b0_0
-ld_impl_linux-64=2.38=h1181459_1
-libffi=3.3=he6710b0_2
-libgcc-ng=12.1.0=h8d9b700_16
-libgomp=12.1.0=h8d9b700_16
-libstdcxx-ng=12.1.0=ha89aaad_16
-markupsafe=2.1.1=py39h7f8727e_0
-mkl=2021.4.0=h06a4308_640
-mkl-service=2.4.0=py39h7f8727e_0
-mkl_fft=1.3.1=py39hd3c417c_0
-mkl_random=1.2.2=py39h51133e4_0
-ncurses=6.3=h5eee18b_3
-numpy=1.23.1=py39h6c91a56_0
-numpy-base=1.23.1=py39ha15fc14_0
-openssl=1.1.1q=h7f8727e_0
-pandas=1.4.4=py39h1832856_0
-pip=22.1.2=py39h06a4308_0
-python=3.9.13=haa1d7c7_1
-python-dateutil=2.8.2=pyhd3eb1b0_0
-python_abi=3.9=2_cp39
-pytz=2022.1=py39h06a4308_0
-readline=8.1.2=h7f8727e_1
-requests=2.28.1=pypi_0
-setuptools=63.4.1=py39h06a4308_0
-six=1.16.0=pyhd3eb1b0_1
-sqlite=3.39.2=h5082296_0
-tk=8.6.12=h1ccaba5_0
-tzdata=2022c=h04d1e81_0
-urllib3=1.26.12=pypi_0
-werkzeug=2.2.2=pyhd8ed1ab_0
-wheel=0.37.1=pyhd3eb1b0_0
-xz=5.2.5=h7f8727e_1
-zipp=3.8.0=py39h06a4308_0
-zlib=1.2.12=h5eee18b_3
+click==7.1.2
+Flask==1.1.2
+itsdangerous==1.1.0
+Jinja2==2.11.2
+MarkupSafe==1.1.1
+Werkzeug==1.0.1
+gunicorn==20.0.4
